Fixed the color contrast of the tutorial.

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -208,8 +208,8 @@ span.docs.inlineblock {
     padding: 0.10rem 0.3rem;
     border-radius: 0.3rem;
     white-space: nowrap;
-    background-color: lighten(@orange, 10%);
-    border: 1px solid @orange;
+    background-color: @orange;
+    border: 1px solid darken(@orange, 0.2);
     color: @white;
 }
 
